fix whitespace in template editor

--- a/src/containers/TemplateEditor/styles.scss
+++ b/src/containers/TemplateEditor/styles.scss
@@ -165,3 +165,7 @@
 .fieldContents {
     background: $pink;
 }
+
+.container {
+    margin-bottom: 100px;
+}
